--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Klauzúra LS-21/22</title>
-  <link rel="stylesheet" href="./styles/style.scss">
-</head>
-<body>
-  <div class="webgl"></div>
-  <script src="app.js" type="module"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Klauzúra LS-21/22</title>
+    <link rel="stylesheet" href="./styles/style.scss" />
+  </head>
+  <body>
+    <video muted autoplay loop>
+      <source class="clouds" src="./video/klauzura_clouds.mp4" type="video/mp4" />
+    </video>
+    <div class="webgl"></div>
+    <script src="app.js" type="module"></script>
+  </body>
 </html>
