--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <source class="clouds" src="./video/klauzura_clouds.mp4" type="video/mp4" />
     </video>
     <div class="webgl"></div>
+    <button class="reset-btn">Reset</button>
     <script src="app.js" type="module"></script>
   </body>
 </html>
