--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,13 @@
       <source class="clouds__transition" src="./video/klauzura_cloud-transition.mp4" type="video/mp4" />
     </video>
     <div class="webgl"></div>
+    <div class="white__cover"></div>
     <div class="btn">
       <button class="intro-btn">Intro</button>
       <button class="reset-btn">Reset</button>
       <button class="fullscreen-btn">Fullscreen</button>
+      <button class="read-btn">Read</button>
+      <button class="read-btn--close">Close Read</button>
     </div>
     <script src="app.js" type="module"></script>
   </body>
