--- a/src/index.html
+++ b/src/index.html
@@ -57,11 +57,10 @@
         </h1>
         <div class="ui__intro--btn">
           <span>Enter</span>
-          <div class="--background"></div>
-          <div class="--background"></div>
+          <!-- <div class="--background"></div>
+          <div class="--background"></div> -->
         </div>
         <p class="ui__intro__text ui__intro__text--1" data-separate>On 24. February, Russian bombs started falling on Mariupol.</p>
-        <p class="ui__intro__text ui__intro__text--2" data-separate>Thousands of individual tragedies have been buried under the ruins.</p>
         <p class="ui__intro__text ui__intro__text--3" data-separate>Try to find them by moving your mouse.</p>
         <div class="ui__intro__text--icon">
           <span class="material-symbols-outlined">mouse</span>
@@ -79,14 +78,39 @@
         <span data-reveal="ui" class="ui__bottom__sound--btn material-symbols-outlined">volume_up</span>
         <span data-reveal="ui" class="ui__bottom__fullscreen--btn material-symbols-outlined">fullscreen</span>
       </div>
+
+      <!-- Sidebar -->
+      <div class="ui__sidebar" data-reveal="ui"></div>
+
+      <!-- Read -->
+      <div class="ui__read">
+        <div class="ui__read--btn">
+          <span>Read</span>
+          <!-- <div class="--background"></div>
+          <div class="--background"></div> -->
+        </div>
+        <div class="ui__read--continue">Continue</div>
+      </div>
+
+      <!-- Story -->
+      <div class="ui__story--container">
+        <div class="ui__story">
+          <div class="ui__story--number">01</div>
+          <h1 class="ui__story--title" data-read>Being ill meant a certain death</h1>
+          <p class="ui__story--body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis sed pretium ipsum, ultrices diam platea orci vehicula lobortis. Ut neque, risus, diam, habitant. Facilisi pellentesque sed urna pellentesque at duis odio. Neque nullam ut in hendrerit sit ipsum tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis sed pretium ipsum, ultrices diam platea orci.</p>
+          <div class="ui__story--btn">
+            <span>Close</span>
+            <!-- <div class="--background"></div>
+            <div class="--background"></div> -->
+          </div>
+        </div>
+      </div>
     </div>
     <div class="webgl"></div>
     <div class="white__cover"></div>
-    <div class="btn">
-      <button class="reset-btn">Reset</button>
-      <button class="read-btn">Read</button>
+    <!-- <div class="btn">
       <button class="read-btn--close">Close Read</button>
-    </div>
+    </div> -->
     <script src="app.js" type="module"></script>
   </body>
 </html>
