logic finished, bugged asfck

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,9 @@
       </div>
 
       <!-- Sidebar -->
-      <div class="ui__sidebar" data-reveal="ui"></div>
+      <div class="ui__sidebar">
+        <div class="ui__sidebar--progress"></div>
+      </div>
 
       <!-- Read -->
       <div class="ui__read">
@@ -90,6 +92,15 @@
           <div class="--background"></div> -->
         </div>
         <div class="ui__read--continue">Continue</div>
+      </div>
+
+      <!-- Read Reveald -->
+      <div class="ui__read__revealed">
+        <div class="ui__read__revealed--btn">
+          <span>Push Space to Read</span>
+          <!-- <div class="--background"></div>
+          <div class="--background"></div> -->
+        </div>
       </div>
 
       <!-- Story -->
