--- a/src/index.html
+++ b/src/index.html
@@ -60,11 +60,21 @@
           <!-- <div class="--background"></div>
           <div class="--background"></div> -->
         </div>
-        <p class="ui__intro__text ui__intro__text--1" data-separate>On 24. February, Russian bombs started falling on Mariupol.</p>
-        <p class="ui__intro__text ui__intro__text--3" data-separate>Try to find them by moving your mouse.</p>
+        <div class="ui__intro__text__center">
+          <p class="ui__intro__text ui__intro__text--1" data-separate>24. February 2022</p>
+          <p class="ui__intro__text ui__intro__text--2" data-separate>Innocent people started losing their lives in Mariupol, due to Russian bombing.</p>
+        </div>
+        <p class="ui__intro__text__center ui__intro__text ui__intro__text--3" data-separate>By moving you mouse, find stories of the victims.</p>
         <div class="ui__intro__text--icon">
           <span class="material-symbols-outlined">mouse</span>
         </div>
+      </div>
+
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
 
       <!-- Top -->
@@ -105,6 +115,10 @@
 
       <!-- Story -->
       <div class="ui__story--container">
+        <div class="ui__story--close">
+          <div class="ui__story--close__line"></div>
+          <div class="ui__story--close__line"></div>
+        </div>
         <div class="ui__story">
           <div class="ui__story--number">01</div>
           <h1 class="ui__story--title" data-read>Being ill meant a certain death</h1>
